--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Arduino weather station",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,7 +18,9 @@
   },
   "homepage": "https://github.com/juanialt/wstation#readme",
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.16.2",
+    "mongodb": "^2.2.33",
     "superagent": "^3.8.1"
   }
 }
